Fixed spacing issue in self-profile view.

--- a/angular-universe/src/app/components/main-site-components/self-profile/self-profile.component.css
+++ b/angular-universe/src/app/components/main-site-components/self-profile/self-profile.component.css
@@ -12,6 +12,7 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 1.5rem;
+    gap: 2rem;
     border-bottom: 1px solid var(--dark1);
     padding-bottom: 0.75rem;
 }
